Update contact email in index.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="card">
       <h3>Contact</h3>
       <p>If you're interested in cloud projects, migration work, or talking shop:</p>
-      <p><a href="mailto:you@example.com">you@example.com</a></p>
+      <p><a href="mailto:you@example.com">wmlacy3000@gmail.com</a></p>
     </div>
   </div>
 </body>
